fix spacing between qr code and footer

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-block: 4rem;
 }
 
 .wrapper {
